testsuite/tests/builtins/pattern/non_bool_case_sentive/test.out
Error: Invalid argument type
   ╭─[ <working-dir>/script.lkql:1:1 ]
   │
 1 │ pattern("regex", "Not a bool")
   │ ───────────────┬──────────────  
   │                ╰──────────────── Expecting a "Bool" for the parameter "case_sensitive", got a "Str"
───╯
